# topology_scan.py
@@ -4,9 +4,126 @@ import time
 import socket
 import json
 import ipaddress
+from ping3 import ping
 
 # Diccionario para almacenar la información de los dispositivos y sus conexiones
 topologia = {}
+
+def obtener_running_config(nombre, ip, usuario, contrasena):
+    """
+    The function `obtener_info_dispositivo` connects to a device via SSH, sends commands to retrieve its
+    configuration, and stores the information in a dictionary.
+    
+    :param nombre: The name of the device you want to obtain information from
+    :param ip: The "ip" parameter is the IP address of the device you want to connect to
+    :param usuario: The parameter "usuario" refers to the username used to connect to the device via
+    SSH. It is the username that will be used to authenticate and establish the SSH connection
+    :param contrasena: The parameter "contrasena" is the password used to authenticate and establish a
+    connection to the device via SSH
+    """
+    try:
+        # Conéctate al dispositivo vía SSH
+        ssh = paramiko.SSHClient()
+        ssh.set_missing_host_key_policy(paramiko.AutoAddPolicy())
+        ssh.connect(ip, username=usuario, password=contrasena)
+
+        # Abre un canal SSH
+        canal = ssh.invoke_shell()
+
+        # Envía comandos de inicio de sesión, si es necesario
+        #canal.send('usuario\n')
+        #canal.send('contrasena\n')
+
+        # Desactiva la paginación
+        canal.send('terminal length 0\n')
+
+        # Agrega comandos adicionales si es necesario
+        canal.send('enable\n')  # Ejemplo de comando 'enable' para privilegios ejecutivos
+        time.sleep(2)        
+        canal.send('root\n')  # Agrega comandos adicionales aquí
+        time.sleep(2)
+        # Espera un momento para que los comandos se ejecuten antes de obtener la salida
+        while not canal.recv_ready():
+            pass
+
+        # Envía el comando 'show running-config' y obtiene la salida
+        canal.send('show running-config\n')
+        while not canal.recv_ready():
+            pass
+        time.sleep(5)
+        configuracion = canal.recv(65535).decode('utf-8')
+        time.sleep(2)
+
+        # Almacena la información en el diccionario de topología
+        ssh.close()
+        return configuracion
+
+    except Exception as e:
+        print(f"No se pudo conectar a {nombre} en {ip}: {str(e)}")
+
+
+def obtener_usuarios(nombre, ip, usuario, contrasena):
+    """
+    The function `obtener_info_dispositivo` connects to a device via SSH, sends commands to retrieve its
+    configuration, and stores the information in a dictionary.
+    
+    :param nombre: The name of the device you want to obtain information from
+    :param ip: The "ip" parameter is the IP address of the device you want to connect to
+    :param usuario: The parameter "usuario" refers to the username used to connect to the device via
+    SSH. It is the username that will be used to authenticate and establish the SSH connection
+    :param contrasena: The parameter "contrasena" is the password used to authenticate and establish a
+    connection to the device via SSH
+    """
+    try:
+        # Conéctate al dispositivo vía SSH
+        ssh = paramiko.SSHClient()
+        ssh.set_missing_host_key_policy(paramiko.AutoAddPolicy())
+        ssh.connect(ip, username=usuario, password=contrasena)
+
+        # Abre un canal SSH
+        canal = ssh.invoke_shell()
+
+        # Envía comandos de inicio de sesión, si es necesario
+        #canal.send('usuario\n')
+        #canal.send('contrasena\n')
+
+        # Desactiva la paginación
+        canal.send('terminal length 0\n')
+
+        # Agrega comandos adicionales si es necesario
+        canal.send('enable\n')  # Ejemplo de comando 'enable' para privilegios ejecutivos
+        time.sleep(2)        
+        canal.send('root\n')  # Agrega comandos adicionales aquí
+        time.sleep(2)
+        # Espera un momento para que los comandos se ejecuten antes de obtener la salida
+        while not canal.recv_ready():
+            pass
+
+        # Envía el comando 'show running-config' y obtiene la salida
+        canal.send('show running-config\n')
+        while not canal.recv_ready():
+            pass
+        time.sleep(5)
+        configuracion = canal.recv(65535).decode('utf-8')
+        time.sleep(2)
+        # Analiza la configuración en busca de conexiones
+        usuarios = re.findall(r'username (\S+).*?', configuracion, re.DOTALL)
+        time.sleep(3)
+
+        # Almacena la información en el diccionario de topología
+        
+        for usr in usuarios:
+            time.sleep(2)
+            usuarios[nombre] = {
+                'Usuariois': usr[0],
+            }
+
+        # Almacena la información en el diccionario de topología
+        ssh.close()
+        return usuarios
+
+    except Exception as e:
+        print(f"No se pudo conectar a {nombre} en {ip}: {str(e)}")
 
 # Función para obtener información de un dispositivo
 def obtener_info_dispositivo(nombre, ip, usuario, contrasena):
@@ -66,10 +183,84 @@ def obtener_info_dispositivo(nombre, ip, usuario, contrasena):
                 'ip': ip,
                 'conexiones': [ 
                     {
-                        'interfaz': conn[0], 'ip': conn[1]
+                        'interfaz': conn[0],
+                        'ip': conn[1]
                     } 
                 ]
             }
+
+        ssh.close()
+
+    except Exception as e:
+        print(f"No se pudo conectar a {nombre} en {ip}: {str(e)}")
+
+
+# Función para obtener información de un dispositivo
+def obtener_interfaz(nombre, ip, usuario, contrasena):
+    """
+    The function `obtener_info_dispositivo` connects to a device via SSH, sends commands to retrieve its
+    configuration, and stores the information in a dictionary.
+    
+    :param nombre: The name of the device you want to obtain information from
+    :param ip: The "ip" parameter is the IP address of the device you want to connect to
+    :param usuario: The parameter "usuario" refers to the username used to connect to the device via
+    SSH. It is the username that will be used to authenticate and establish the SSH connection
+    :param contrasena: The parameter "contrasena" is the password used to authenticate and establish a
+    connection to the device via SSH
+    """
+    try:
+        # Conéctate al dispositivo vía SSH
+        ssh = paramiko.SSHClient()
+        ssh.set_missing_host_key_policy(paramiko.AutoAddPolicy())
+        ssh.connect(ip, username=usuario, password=contrasena)
+
+        # Abre un canal SSH
+        canal = ssh.invoke_shell()
+
+        # Envía comandos de inicio de sesión, si es necesario
+        #canal.send('usuario\n')
+        #canal.send('contrasena\n')
+
+        # Desactiva la paginación
+        canal.send('terminal length 0\n')
+
+        # Agrega comandos adicionales si es necesario
+        canal.send('enable\n')  # Ejemplo de comando 'enable' para privilegios ejecutivos
+        time.sleep(2)        
+        canal.send('root\n')  # Agrega comandos adicionales aquí
+        time.sleep(2)
+        # Espera un momento para que los comandos se ejecuten antes de obtener la salida
+        while not canal.recv_ready():
+            pass
+
+        # Envía el comando 'show running-config' y obtiene la salida
+        canal.send('show running-config\n')
+        while not canal.recv_ready():
+            pass
+        time.sleep(5)
+        configuracion = canal.recv(65535).decode('utf-8')
+        time.sleep(2)
+
+        # Analiza la configuración en busca de conexiones
+        conexiones = re.findall(r'interface (\S+).*?ip address (\S+ \S+)', configuracion, re.DOTALL)
+        time.sleep(3)
+
+        # Almacena la información en el diccionario de topología
+        
+        for conn in conexiones:
+            time.sleep(2)
+            topologia[conn[0]] = {
+                'conexiones': [ 
+                    {
+                        'interfaz': conn[0],
+                        'ip': conn[1],
+                        'Estado': "No Activo" if ping(ip) == None else "Activo" , #Una funcion bien locochona
+                        'Liga': f'/routes/{ip} *o* {nombre}/interfaces'
+                    } 
+                ]
+            }
+
+        return json.dumps(topologia, indent=4)
 
         ssh.close()
 
@@ -175,4 +366,4 @@ def scan_all():
     print("Completado!")
     return topology
 
-print(scan_all())
+print(obtener_interfaz("real_world", "192.168.200.1", 'cisco', 'root'))
